# ChatGPT-CLI

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
chatgpt_cli/: api.py  app.py  config.py  storage.py
