[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chatgpt-cli"
version = "0.2.0"
description = "A developer-friendly ChatGPT CLI built with Textual"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Abhishek Sharma" },
]
keywords = ["chatgpt", "openai", "cli", "tui", "terminal", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]
dependencies = [
    "textual>=0.70.0",
    "openai>=1.0.0",
    "platformdirs>=4.0.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Repository = "https://github.com/abhisheksharma/chatgpt-cli"

[project.scripts]
chatgpt = "chatgpt_cli.app:main"

[tool.hatch.build.targets.wheel]
packages = ["chatgpt_cli"]
